# gdelt-newsimpact

./: .env.example  .gitignore  README.md  deploy_model.dockerfile  docker-compose.yaml  mlflow.dockerfile  prefect-worker.dockerfile  pyproject.toml  requirements-prefect.txt
mlartifacts/1/5664a4bf4d274268bdcf7694267abbcb/artifacts/preprocessing/: ordinal_encoder_prototype.pkl
mlartifacts/2/models/m-54ad88dbea1c40139b5123ffaa9d4729/artifacts/: MLmodel  conda.yaml  (+2 more)
monitoring/config/: grafana_dashboards.yaml  grafana_datasources.yaml
monitoring/predictions/inference_2025_03_13/: predictions.parquet
monitoring/predictions/inference_2025_08_17/: predictions.parquet
monitoring/predictions/test_chain/: predictions.parquet
monitoring/scripts/: calculate_metrics.py
notebooks/: exploratory_data_analysis.ipynb  get_and_explore_data.ipynb  query_model.ipynb
pgdata/: postmaster.pid
pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
pgdata/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16385  16386  16393  16395  16412  16412_fsm  16416  16417  16424  16434  16439  16446  16449  16457  16463  16471  16474  16481  16486  16488  16493  16500  16505  16511  16512  16524  16534  16535  16536  16537  16538  16543  16554  16562  16564  (+62 more)
pgdata/base/5/: 2619  pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
pgdata/pg_xact/: 0000
prefect/: deploy.py  test_pipeline.py  test_tasks.py
prefect/flows/: inference_pipeline.py
prefect/tasks/: data_tasks.py  model_tasks.py
scripts/: develop_models.py  download_data_with_BigQuery.py  prepare_data_for_modeling.py  serve_model.py  setup_gcloud.sh
(+4 files in other folders)
