[project]
name = "mlopsproject2"
version = "0.1.0"
description = "Project number 2 for DataTalksClub MLOps Zoomcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "mlflow==3.2.0",
    "gunicorn",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.1",
    "google-cloud-bigquery>=3.35.1",
    "pandas-gbq>=0.29.2",
    "python-dotenv>=1.1.1",
    "click>=8.2.1",
    "xgboost>=3.0.4",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8",
    "optuna>=4.4.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]
